# oceldb

./: .gitignore  Design.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: storage-format.md
docs/design/: dsl.md  inspection-vs-discovery.md  object-lifecycle.md
examples/: RUNNING_EXAMPLE.md  atlas-fulfillment.ipynb  generate_running_example.py  smoke.py
examples/data/atlas-fulfillment/: event.parquet  event_object.parquet  manifest.json  object.parquet  object_change.parquet  object_object.parquet
examples/data/smoke-example/: event.parquet  event_object.parquet  manifest.json  object.parquet  object_change.parquet  object_object.parquet
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/pages/: BrowserPage.tsx  OverviewPage.tsx  ProcessMapPage.tsx  SqlConsolePage.tsx
src/oceldb/: __init__.py  _util.py  dsl.py  expr.py  inspect.py  ocel.py  schema.py  store.py  types.py  utils.py  view.py  writer.py
src/oceldb/analysis/: __init__.py  activity_counts.py  api.py  case_time_bounds.py  end_activity_counts.py  event_object_type_counts.py  object_timeline.py  object_type_counts.py  start_activity_counts.py
src/oceldb/api/: __init__.py  base.py  materialize.py  states.py  sublog.py
src/oceldb/ast/: aggregation.py  base.py  field.py  function.py  relation.py
src/oceldb/case_centric/: __init__.py  dfg.py  petri_net.py  process_tree.py  types.py
src/oceldb/compile/: __init__.py  context.py  expr.py  plan.py  relations.py  schema.py  sources.py  validate.py
src/oceldb/compiler/: context.py  render_expr.py
src/oceldb/core/: __init__.py  manifest.py  ocel.py
src/oceldb/discovery/: __init__.py  lifecycle.py  ocdfg.py  ocpn.py
src/oceldb/dsl/: __init__.py  aggregates.py  attributes.py  conditional.py  fields.py  functions.py  relations.py  sorting.py  windows.py
src/oceldb/expr/: __init__.py  _col.py  _context.py  _expr.py  _proxy.py  _types.py  builders.py  nodes.py  relations.py
src/oceldb/expressions/: __init__.py  _utils.py  attributes.py  base.py  comparison.py  context.py  events.py  field.py  linked.py  related.py  scalar.py  scopes.py  temporal.py
src/oceldb/filters/: __init__.py  _step.py  _utils.py  events.py
src/oceldb/inspect/: __init__.py  attributes.py  inspector.py  overview.py  profile.py  relations.py  types.py
src/oceldb/inspection/: inspector.py
src/oceldb/interop/: __init__.py  pm4py.py
src/oceldb/io/: __init__.py  _manifest.py  convert.py  read.py  registry.py  resolve.py  source.py  sql.py  sqlite.py  write.py  writer.py
src/oceldb/models/: __init__.py  petri_net.py
src/oceldb/plan/: __init__.py  nodes.py  scope.py  sources.py
src/oceldb/predicates/: __init__.py  cooccurrence_count.py  e2o_count.py  event_count.py  has_matching_predecessor.py  involves.py  o2o_count.py  o2o_reachable.py  participated_in.py  time_between.py  utils.py
src/oceldb/query/: __init__.py  base.py  compiler.py  (+12 more)
tests/: conftest.py  test_core.py  test_discovery.py  test_dsl_exprs.py  test_examples.py  test_expr.py  test_filters.py  test_inspect.py  test_interop.py  test_io.py  test_ocel.py  test_query.py  test_structural_filters.py  test_sublog.py  test_view.py
(+72 files in other folders)
