[project]
name = "oceldb"
version = "0.4.0"
description = "DuckDB-backed OCEL 2.0 storage and lazy query DSL"
authors = [{name = "Sebastian Menne", email = "sebastian.menne@rwth-aachen.de"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
]

[project.optional-dependencies]
pm4py = [
    "pm4py>=2.7.16",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "ipykernel>=7.2.0",
    "pm4py>=2.7.16",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.pytest_cache",
    "/.ruff_cache",
    "/.uv-cache",
    "/.venv",
    "/dist",
    "/test.custom",
]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/docs",
    "/examples",
    "/pyproject.toml",
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oceldb"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.basedpyright]
include = ["src"]
exclude = ["tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
