[project]
name = "oceldb"
version = "0.7.0"
description = "DuckDB-backed OCEL 2.0 storage with typed queries and in-memory loading"
authors = [{name = "Sebastian Menne", email = "sebastian.menne@rwth-aachen.de"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.1",
    "ibis-framework>=12.0.0",
    "polars>=1.35.2",
    "pyarrow>=24.0.0",
    "pyarrow-hotfix>=0.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.pytest_cache",
    "/.ruff_cache",
    "/.uv-cache",
    "/.venv",
    "/dist",
    "/test.custom",
]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/docs",
    "/examples",
    "/pyproject.toml",
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oceldb"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.basedpyright]
include = ["src"]
exclude = ["tests"]
extraPaths = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
